...
                                    <constraint firstAttribute="width" constant="60" id="pWh-Bf-dBj"/>
                                </constraints>
                            </imageView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mDO-8I-ydQ">
                                <rect key="frame" x="29.666666666666657" y="702" width="343" height="48"/>
                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="AuthButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="48" id="AhB-4J-N4x"/>
                                    <constraint firstAttribute="width" constant="343" id="fJ9-2g-hIm"/>
                                </constraints>
                                <color key="tintColor" red="0.10196078431372549" green="0.10588235294117647" blue="0.13333333333333333" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                <state key="normal" title="Button"/>
...
                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cvI-jV-fkC">
                                                    <rect key="frame" x="344" y="4" width="42" height="42"/>
                                                    <accessibility key="accessibilityConfiguration" identifier="likeButton"/>
                                                    <constraints>
                                                        <constraint firstAttribute="height" constant="42" id="JOi-P9-m7Q"/>
                                                        <constraint firstAttribute="width" constant="42" id="d4W-Sb-5sa"/>
                                                    </constraints>
                                                    <buttonConfiguration key="configuration" style="plain" image="Like_OFF"/>
                                                    <connections>
...
                                <connections>
                                    <outlet property="delegate" destination="ePU-6L-Zmb" id="1kP-zf-won"/>
                                </connections>
                            </scrollView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jxn-oE-dMD">
                                <rect key="frame" x="9" y="55" width="24" height="24"/>
                                <accessibility key="accessibilityConfiguration" identifier="backButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="24" id="RLN-qu-22o"/>
                                    <constraint firstAttribute="width" constant="24" id="sJO-CF-9QL"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" image="Backward"/>
...
