...
    @IBOutlet private var webView: WKWebView!

    private var estimatedProgressObservation: NSKeyValueObservation?

    override func viewDidLoad() {
        super.viewDidLoad()
        webView.accessibilityIdentifier = "WebView"
        webView.navigationDelegate = self
        presenter?.viewDidLoad()
//        estimatedProgressObservation = webView.observe(
//            \.estimatedProgress, options: [],
//            changeHandler: { [weak self] _, _ in
//                guard let self else { return }
...
